--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ function update() {
 	 //this.physics.accelerateToObject(gameState.muncher1, gameState.player, 60);
 	 //gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
     	 //gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
-	 gameState.muncher1.setVelocityX(30);
-	 gameState.muncher1.setVelocityY(30);
+	 gameState.muncher1.setVelocityX(gameState.player.x - 60);
+	 gameState.muncher1.setVelocityY(gameState.player.y - 60);
 	
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
