--- a/index.html
+++ b/index.html
@@ -202,9 +202,11 @@ function update() {
 	 //this.physics.accelerateToObject(gameState.muncher1, gameState.player, 60);
 	 //gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
     	 //gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
+	 gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
+	 gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
 	 gameState.muncher1.setAccelerationX(gameState.player.x - gameState.muncher1.x);
 	 gameState.muncher1.setAccelerationY(gameState.player.y - gameState.muncher1.y);
-	
+	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
  	 gameState.graphics.fillRect(10, 10, 400, 20);
