--- a/index.html
+++ b/index.html
@@ -200,12 +200,11 @@ function update() {
 	  
 	 //Making the enemy move towards the player
 	 //this.physics.accelerateToObject(gameState.muncher1, gameState.player, 60);
-	 //gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
-    	 //gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
 	 gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
-	 gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
-	 gameState.muncher1.setAccelerationX(gameState.player.x - gameState.muncher1.x);
-	 gameState.muncher1.setAccelerationY(gameState.player.y - gameState.muncher1.y);
+    	 gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
+	 gameState.muncher1.setMaxVelocity(200);
+	 gameState.muncher1.setMinVelocity(50);
+
 	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
