--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@ function update() {
 	 //this.physics.accelerateToObject(gameState.muncher1, gameState.player, 60);
 	 gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
     	 gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
-	 this.physics.world.clampVelocity(gameState.muncher1, 50, 200);
+	 if (gameState.muncher1.body.velocity.x > maxVelocity) {
+    	 	gameState.muncher1.body.velocity.x = maxVelocity;
+	 }
+
 
 	  
          //Draw the background for the fuel bar
