--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	    let bounds1
 	    let bounds2
 	    let muncherangle1
+	    let maxVelocity = 100
 	    
 	    //Used to determine whether the game is on the planet or title screen
 	    //Switch between 0 and 1 to go to title screen and planet
