--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ function update() {
 	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
- 	 gameState.graphics.fillRect(10, 10 + 20, 400, 20 + 20);
+ 	 gameState.graphics.fillRect(10, 10, 400, 20);
 	 
 	 //Draw the background for the health bar
  	 gameState.graphicHealth.fillStyle(666666, 1);
