--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ function update() {
 	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
- 	 gameState.graphics.fillRect(10, 10 + 30, 400, 20);
+ 	 gameState.graphics.fillRect(10, 10 + 35, 400, 20);
 	 
 	 //Draw the background for the health bar
  	 gameState.graphicHealth.fillStyle(666666, 1);
@@ -233,7 +233,7 @@ function update() {
 	
          //Draw the full part of the fuel bar
   	 gameState.graphics.fillStyle(5656E1, 1);
- 	 gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
+ 	 gameState.graphics.fillRect(10, 10 + 35, healthBarWidth, 20);
 	  
 	 //Draw the full part of the health bar
   	 gameState.graphicHealth.fillStyle(5656E1, 1);
