--- a/index.html
+++ b/index.html
@@ -236,9 +236,7 @@ function update() {
  	 gameState.graphics.fillRect(10, 10 + 35, healthBarWidth, 20);
 	  
 	 //Draw the full part of the health bar
-  	 //gameState.graphicHealth.fillStyle("rgb(0, 100, 0)", 1);
-	 gameState.graphicHealth.fillStyle = "rgb(0, 100, 0)";
-         gameState.graphicHealth.alpha = 1;
+  	 gameState.graphicHealth.fillStyle(5656E1, 1);
  	 gameState.graphicHealth.fillRect(10, 10, REALhealthBarWidth, 20);
 	  
 	 //Sets the guns position
