--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ function update() {
 	 
 	 //Draw the background for the health bar
  	 gameState.graphics.fillStyle(666666, 1);
- 	 gameState.graphicsfillRect(10, 10, 400, 20);
+ 	 gameState.graphics.fillRect(10, 10, 400, 20);
 	  
          //Calculate the width of the full part of the fuel bar
  	 const healthPercentage = fuel / gameState.maxHealth;
