--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function update() {
  	 gameState.graphics.fillRect(10, 10 + 35, healthBarWidth, 20);
 	  
 	 //Draw the full part of the health bar
-  	 gameState.graphics.fillStyle(0x29DF3F, 1);
+  	 gameState.graphics.fillStyle(0x4AEE4A, 1);
  	 gameState.graphics.fillRect(10, 10, REALhealthBarWidth, 20);
 	  
 	 //Sets the guns position
