--- a/index.html
+++ b/index.html
@@ -317,7 +317,13 @@ function update() {
 	 
 	 //Lets the player get hurt
 	 if (boundsP.contains(boundM1.x, boundM1.y) || boundM1.contains(boundsP.x, boundsP.y)){
-	 	health -= 1
+	 	 health -= 1
+	 }
+	 
+	 //Checks if the player lost all it's health
+	 if (health <= 0){
+		 gameOn = 0
+		 this.scene.restart(this, {}, 'previous')
 	 }
 	 
   }
