--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ function create() {
 	fuel = 200
 	fuelCharge = 100
 	bulletOnGun = 1
+	health = 200
 	  
 	//Start button code
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
