--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ function update() {
 	 //Holds back the enemies
 	 if(counter < 500){
 		gameState.muncher1.x = window.innerWidth / 2
-		gameState.muncher1.y = 0 - window.innerWidth / 10
+		gameState.muncher1.y = 0 - window.innerHeight / 10
 	 }
 	  
 	 //Run the enemies animation
