--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 	    let bounds1
 	    let bounds2
 	    let muncherangle1
+	    let muncherangle2
 	    let muncherVelocity
+	    let muncherVelocity2
 	    let boundM1
+	    let boundM2
 	    let boundsP
 	    
 	    //Used to determine whether the game is on the planet or title screen
@@ -156,10 +159,20 @@ function create() {
 	 gameState.muncher1.body.gravity.y = 0
 	 gameState.muncher1.body.velocity.y = 0;
 	 gameState.muncher1.body.setCollideWorldBounds(true);
+	 gameState.muncher2 = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 3, 'muncher1').setScale(0.25);
+	 gameState.muncher2.body.gravity.y = 0
+	 gameState.muncher2.body.velocity.y = 0;
+	 gameState.muncher2.body.setCollideWorldBounds(true);
 	
 	 //Making the enemies animations
 	 this.anims.create({
       		key: 'muncher1anim',
+      		frames: this.anims.generateFrameNumbers('muncher1', { start: 0, end: 3 }),
+      		frameRate: 10,
+      		repeat: -1
+    	 });
+	 this.anims.create({
+      		key: 'muncher2anim',
       		frames: this.anims.generateFrameNumbers('muncher1', { start: 0, end: 3 }),
       		frameRate: 10,
       		repeat: -1
@@ -209,25 +222,30 @@ function update() {
 	 if(counter < 300){
 		gameState.muncher1.x = window.innerWidth / 2
 		gameState.muncher1.y = 0 - window.innerHeight / 10
+	 } else if (counter < 500) {
+		gameState.muncher2.x = window.innerWidth / 2
+		gameState.muncher2.y = 0 - window.innerHeight / 10
 	 }
 	  
 	 //Run the enemies animation
 	 gameState.muncher1.anims.play('muncher1anim', true);
+	 gameState.muncher2.anims.play('muncher2anim', true);
 	  
-	 //Sets the muncher1 angle
+	 //Sets the munchers angles
 	 muncherangle1 = Math.atan2(gameState.player.y - gameState.muncher1.y, gameState.player.x - gameState.muncher1.x);
 	 gameState.muncher1.rotation = muncherangle1;
+	 muncherangle2 = Math.atan2(gameState.player.y - gameState.muncher2.y, gameState.player.x - gameState.muncher2.x);
+	 gameState.muncher2.rotation = muncherangle2;
 	  
 	 //Making the enemy move towards the player
-	 //gameState.muncher1.setVelocityX(gameState.player.x - gameState.muncher1.x);
-    	 //gameState.muncher1.setVelocityY(gameState.player.y - gameState.muncher1.y);
-	 //if (gameState.muncher1.body.velocity.x > maxVelocity) {
-    	 	//gameState.muncher1.body.velocity.x = maxVelocity;
-	 //}
          gameState.muncher1.speed = 200
 	 muncherVelocity = this.physics.velocityFromRotation(gameState.muncher1.rotation, gameState.muncher1.speed);
 	 gameState.muncher1.body.velocity.x = muncherVelocity.x;
 	 gameState.muncher1.body.velocity.y = muncherVelocity.y;
+	 gameState.muncher2.speed = 200
+	 muncherVelocity2 = this.physics.velocityFromRotation(gameState.muncher2.rotation, gameState.muncher2.speed);
+	 gameState.muncher2.body.velocity.x = muncherVelocity2.x;
+	 gameState.muncher2.body.velocity.y = muncherVelocity2.y;
 	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
@@ -262,6 +280,7 @@ function update() {
 	 bounds1 = gameState.bullet.getBounds();
 	 bounds2 = gameState.platformy.getBounds();
 	 boundM1 = gameState.muncher1.getBounds();
+	 boundM2 = gameState.muncher2.getBounds();
 	  
 	 //Sets the guns rotation
 	 angle = Math.atan2(game.input.mousePointer.y - gameState.gun.y, game.input.mousePointer.x - gameState.gun.x);
@@ -307,6 +326,9 @@ function update() {
 		 if (bounds1.contains(boundM1.x, boundM1.y) || boundM1.contains(bounds1.x, bounds1.y)){
 			 bulletOnGun = 1
 		 }
+		 if (bounds1.contains(boundM2.x, boundM2.y) || boundM2.contains(bounds1.x, bounds1.y)){
+			 bulletOnGun = 1
+		 }
 		 
 		 //If island is hit
 		 if (bounds1.contains(bounds2.x, bounds2.y) || bounds2.contains(bounds1.x, bounds1.y)){
@@ -331,6 +353,8 @@ function update() {
 	 //Lets the player get hurt
 	 if (boundsP.contains(boundM1.x, boundM1.y) || boundM1.contains(boundsP.x, boundsP.y)){
 	 	 health -= 1
+	 } else if (boundsP.contains(boundM2.x, boundM2.y) || boundM2.contains(boundsP.x, boundsP.y)){
+		 health -= 1
 	 }
 	 
 	 //Checks if the player lost all it's health
