--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@ function update() {
 	 if(counter < 300){
 		gameState.muncher1.x = window.innerWidth / 2
 		gameState.muncher1.y = 0 - window.innerHeight / 10
-	 } else if (counter < 500) {
+	 }
+	 if (counter < 500) {
 		gameState.muncher2.x = window.innerWidth / 2
 		gameState.muncher2.y = 0 - window.innerHeight / 10
 	 }
