--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 	    let health = 200
 	    let fuelCharge = 100
 	    let counter = 0
+	    //Muncher vv
 	    let muncherHealth1 = 20
 	    let muncherHealth2 = 20
+	    let muncherHealth3 = 20
+	    //Muncher ^^
 	    let angle
 	    let bulletAngle
 	    let bulletOnGun
@@ -31,12 +34,17 @@
 	    let cursor
 	    let bounds1
 	    let bounds2
+	    //Muncher vv
 	    let muncherangle1
 	    let muncherangle2
+	    let muncherangle3
 	    let muncherVelocity
 	    let muncherVelocity2
+	    let muncherVelocity3
 	    let boundM1
 	    let boundM2
+	    let boundM3
+	    //Muncher ^^
 	    let boundsP
 	    
 	    //Used to determine whether the game is on the planet or title screen
@@ -156,6 +164,7 @@ function create() {
  	 platforms.create(window.innerWidth / 2, window.innerHeight - window.innerHeight / 5, "platform");
   }
 
+
   //Loads enemy stuff
   if(gameOn === 1) {
 	 //Loading the enemies
@@ -167,6 +176,10 @@ function create() {
 	 gameState.muncher2.body.gravity.y = 0
 	 gameState.muncher2.body.velocity.y = 0;
 	 gameState.muncher2.body.setCollideWorldBounds(true);
+	 gameState.muncher3 = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 3, 'muncher1').setScale(0.25);
+	 gameState.muncher3.body.gravity.y = 0
+	 gameState.muncher3.body.velocity.y = 0;
+	 gameState.muncher3.body.setCollideWorldBounds(true);
 	
 	 //Making the enemies animations
 	 this.anims.create({
@@ -177,6 +190,12 @@ function create() {
     	 });
 	 this.anims.create({
       		key: 'muncher2anim',
+      		frames: this.anims.generateFrameNumbers('muncher1', { start: 0, end: 3 }),
+      		frameRate: 10,
+      		repeat: -1
+    	 });
+	 this.anims.create({
+      		key: 'muncher3anim',
       		frames: this.anims.generateFrameNumbers('muncher1', { start: 0, end: 3 }),
       		frameRate: 10,
       		repeat: -1
@@ -231,16 +250,23 @@ function update() {
 		gameState.muncher2.x = window.innerWidth / 2
 		gameState.muncher2.y = 0 - window.innerHeight / 10
 	 }
+	 if (counter < 500 || muncherHealth3 <= 0) {
+		gameState.muncher3.x = window.innerWidth / 2
+		gameState.muncher3.y = 0 - window.innerHeight / 10
+	 }
 	  
 	 //Run the enemies animation
 	 gameState.muncher1.anims.play('muncher1anim', true);
 	 gameState.muncher2.anims.play('muncher2anim', true);
+	 gameState.muncher3.anims.play('muncher3anim', true);
 	  
 	 //Sets the munchers angles
 	 muncherangle1 = Math.atan2(gameState.player.y - gameState.muncher1.y, gameState.player.x - gameState.muncher1.x);
 	 gameState.muncher1.rotation = muncherangle1;
 	 muncherangle2 = Math.atan2(gameState.player.y - gameState.muncher2.y, gameState.player.x - gameState.muncher2.x);
 	 gameState.muncher2.rotation = muncherangle2;
+	 muncherangle3 = Math.atan2(gameState.player.y - gameState.muncher3.y, gameState.player.x - gameState.muncher3.x);
+	 gameState.muncher3.rotation = muncherangle3;
 	  
 	 //Making the enemy move towards the player
          gameState.muncher1.speed = 200
@@ -251,6 +277,10 @@ function update() {
 	 muncherVelocity2 = this.physics.velocityFromRotation(gameState.muncher2.rotation, gameState.muncher2.speed);
 	 gameState.muncher2.body.velocity.x = muncherVelocity2.x;
 	 gameState.muncher2.body.velocity.y = muncherVelocity2.y;
+	 gameState.muncher3.speed = 200
+	 muncherVelocity3 = this.physics.velocityFromRotation(gameState.muncher3.rotation, gameState.muncher3.speed);
+	 gameState.muncher3.body.velocity.x = muncherVelocity3.x;
+	 gameState.muncher3.body.velocity.y = muncherVelocity3.y;
 	  
          //Draw the background for the fuel bar
  	 gameState.graphics.fillStyle(666666, 1);
@@ -286,6 +316,7 @@ function update() {
 	 bounds2 = gameState.platformy.getBounds();
 	 boundM1 = gameState.muncher1.getBounds();
 	 boundM2 = gameState.muncher2.getBounds();
+	 boundM3 = gameState.muncher3.getBounds();
 	  
 	 //Sets the guns rotation
 	 angle = Math.atan2(game.input.mousePointer.y - gameState.gun.y, game.input.mousePointer.x - gameState.gun.x);
@@ -336,6 +367,11 @@ function update() {
 		 if (bounds1.contains(boundM2.x, boundM2.y) || boundM2.contains(bounds1.x, bounds1.y)){
 			 muncherHealth2 -= 1
 			 console.log(muncherHealth2)
+			 bulletOnGun = 1
+		 }
+		 if (bounds1.contains(boundM3.x, boundM3.y) || boundM3.contains(bounds1.x, bounds1.y)){
+			 muncherHealth3 -= 1
+			 console.log(muncherHealth3)
 			 bulletOnGun = 1
 		 }
 		 
