--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@ function update() {
 		gameState.muncher1.y = 0 - window.innerHeight / 10
 	 }
 	 if (counter < 500 || muncherHealth2 <= 0) {
-		gameState.muncher2.x = window.innerWidth / 2
+		gameState.muncher2.x = window.innerWidth
 		gameState.muncher2.y = 0 - window.innerHeight / 10
 	 }
 	 if (counter < 700 || muncherHealth3 <= 0) {
-		gameState.muncher3.x = window.innerWidth / 2
+		gameState.muncher3.x = 0
 		gameState.muncher3.y = 0 - window.innerHeight / 10
 	 }
 	  
