--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ function update() {
 			round = 2
 			counter = 0
 			console.log('round ' + round)
+			//NEED TO RESET ALL MONSTER HEALTH
 		}
 	 } else if(round === 2){
 		 if(counter < 300 || muncherHealth1 <= 0){
