--- a/index.html
+++ b/index.html
@@ -340,7 +340,13 @@ function update() {
 			round = 2
 			counter = 0
 			console.log('round ' + round)
-			//NEED TO RESET ALL MONSTER HEALTH
+			muncherHealth1 = 20
+			muncherHealth2 = 20
+			muncherHealth3 = 20
+			muncherHealth4 = 20
+			muncherHealth5 = 20
+			muncherHealth6 = 20
+			muncherHealth7 = 20
 		}
 	 } else if(round === 2){
 		 if(counter < 300 || muncherHealth1 <= 0){
@@ -375,6 +381,13 @@ function update() {
 			round = 3
 			counter = 0
 			console.log('round ' + round)
+			muncherHealth1 = 20
+			muncherHealth2 = 20
+			muncherHealth3 = 20
+			muncherHealth4 = 20
+			muncherHealth5 = 20
+			muncherHealth6 = 20
+			muncherHealth7 = 20
 		}
 	 }
 	 //Run the enemies animation
