--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ function update() {
 		if (counter > 1500 && muncherHealth1 <= 0 && muncherHealth2 <= 0 && muncherHealth3 <= 0 && muncherHealth4 <= 0 && muncherHealth5 <= 0 && muncherHealth6 <= 0 && muncherHealth7 <= 0){
 			round = 2
 			counter = 0
+			console.clear()
 			console.log('round ' + round)
 			muncherHealth1 = 20
 			muncherHealth2 = 20
@@ -380,6 +381,7 @@ function update() {
 		if (counter > 1400 && muncherHealth1 <= 0 && muncherHealth2 <= 0 && muncherHealth3 <= 0 && muncherHealth4 <= 0 && muncherHealth5 <= 0 && muncherHealth6 <= 0 && muncherHealth7 <= 0){
 			round = 3
 			counter = 0
+			console.clear()
 			console.log('round ' + round)
 			muncherHealth1 = 20
 			muncherHealth2 = 20
