--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@ function create() {
   //var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
   //anim.play();
 
+  //Clearing the console real quick
+  console.clear()
 }
 
 //The update function
